tests/errors/test_46.xpp
// Unknown array size at compile time

extern printf(i8*, ...) i32;

let mut y: bool[];

fn main() void {
    let mut x: i64[];
}
